Fri, 04 Apr 2008 09:46:23 +0200 <thp@perli.net>
Increase filename size limitation from 50 to 100 chars in MP3 player sync

	* src/gpodder/sync.py: Increase the number at which file names are cut
	down in length to 100 characters and also cut folder names to that
	length; thanks to Bernd Schlapsi for reporting this bug on the list

Sun, 30 Mar 2008 10:48:41 +0200 <thp@perli.net>
Make the Quit buttons actually quit when using the tray icon

	* src/gpodder/gui.py: Patch from Nick L. to make the function of all
	"Quit" buttons really quit gPodder and only make the window's "X"
	button act as "minimize to tray" button; Also, update the credits name

Sat, 29 Mar 2008 17:13:26 +0100 <thp@perli.net>
Project management updates (authors, contributors and copyright)

	* AUTHORS: Removed (was outdated); content now in gui.py (AboutDialog)
	* bin/gpodder, data/po/Makefile, doc/dev/copyright_notice, 
	  doc/dev/win32/setup-win32.py, INSTALL, Makefile, README,
	  setup.py: Updated Copyright and old website URL to include 2008, the
	  gPodder team and www.gpodder.org
	* src/gpodder/*.py: Updated Copyright years
	* src/gpodder/gui.py: Add list of contributors from AUTHORS file and
	from the content on the website's news page (please mail me if I
	forgot to mention you as a contributor, I surely have missed a few);
	make the AboutDialog's application name "gPodder" (from gpodder) and
	add an URL hook function to the AboutDialog, so the website is opened
	in the user's default web browser

Sat, 29 Mar 2008 16:30:02 +0100 <thp@perli.net>
Report errors in parsing/loading an already-added channel in the navigator

	* src/gpodder/gui.py: Show the error from feedparser in the channel's
	tooltip if there has been an error loading the channel
	* src/gpodder/libpodcasts.py: Make sure we can load a default title
	when using get_by_url(); save the parse_error variable for each
	channel (it defaults to None if there is no error); mark the